--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,5 +1,5 @@
 {
-  "msg": "{} are written in the {} language",
+  "msg": "Bonjour",
   "msg_named": "Easy localization is written in the {lang} language",
   "msg_mixed": "{} are written in the {lang} language",
   "gender": {
